Fix iPhone 4S cropping

--- a/_sass/components/full-image.sass
+++ b/_sass/components/full-image.sass
@@ -14,6 +14,6 @@
       border: 0
 
     &.-cropped
-      height: 200px
+      max-height: 200px
       overflow: hidden
 
